Add pattern matching for the unknown SSH host key case:

The authenticity of host 'github.com (140.82.113.3)' can't be established...

BUG: 444862
FIXED-IN: 6.6